--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
 }
 
 .tree {
+  z-index: 10;
   position: absolute;
 }
 
@@ -71,7 +72,7 @@ body {
 }
 
 .speed {
-  z-index: 10;
+  z-index: 100;
   position: fixed;
   left: 10px;
   top: 10px;
@@ -112,6 +113,7 @@ body {
 }
 
 .btn {
+  z-index: 100;
   position: fixed;
   right: 10px;
   top: 10px;
@@ -142,14 +144,23 @@ body {
 .arrow {
   position: absolute;
   width: 60px;
+  -webkit-transform: translate(20px, -400px);
+      -ms-transform: translate(20px, -400px);
+          transform: translate(20px, -400px);
 }
 
 .coin {
   position: absolute;
   width: 50px;
+  -webkit-transform: translate(0px, -100px);
+      -ms-transform: translate(0px, -100px);
+          transform: translate(0px, -100px);
 }
 
 .danger {
   position: absolute;
   width: 80px;
+  -webkit-transform: translate(-75px, -250px);
+      -ms-transform: translate(-75px, -250px);
+          transform: translate(-75px, -250px);
 }
