--- a/style.scss
+++ b/style.scss
@@ -19,6 +19,7 @@ body {
 	height: 100vh;
 }
 .tree {
+	z-index: 10;
 	position: absolute;
 }
 .tree1 {
@@ -47,7 +48,7 @@ body {
 }
 
 .speed {
-	z-index: 10;
+	z-index: 100;
 	position: fixed;
 	left: 10px;
 	top: 10px;
@@ -78,6 +79,7 @@ body {
 	font-size: 24px;
 }
 .btn {
+	z-index: 100;
 	position: fixed;
 	right: 10px;
 	top: 10px;
@@ -103,12 +105,15 @@ body {
 .arrow {
 	position: absolute;
 	width: 60px;
+	transform: translate(20px, -400px);
 }
 .coin {
 	position: absolute;
 	width: 50px;
+	transform: translate(0px, -100px);
 }
 .danger {
 	position: absolute;
 	width: 80px;
+	transform: translate(-75px, -250px);
 }
