add modal finishGame

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   background-color: #6c7b2a;
   margin: 0;
@@ -163,4 +164,132 @@ body {
   -webkit-transform: translate(-75px, -250px);
       -ms-transform: translate(-75px, -250px);
           transform: translate(-75px, -250px);
+}
+
+.score {
+  position: absolute;
+  top: 150px;
+  left: 10px;
+  font-size: 24px;
+  width: 120px;
+  height: 120px;
+  background-color: orangered;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  z-index: 100;
+}
+
+.backdrop {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.75);
+  opacity: 0.5;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 50;
+}
+
+.backdrop-container {
+  padding: 5px 8px;
+  border-radius: 8px;
+  background: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 350px;
+  margin: 0px auto;
+}
+
+.finish-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.finish-text::before,
+.finish-text::after {
+  content: "👿";
+  display: block;
+  margin-left: 10px;
+  font-size: 36px;
+  -webkit-animation: ease 0.3s jump infinite alternate;
+          animation: ease 0.3s jump infinite alternate;
+}
+
+.finish-text::before {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s;
+  margin-right: 10px;
+}
+
+.finish-text span {
+  margin-left: 10px;
+  color: rgb(142, 12, 82);
+  font-size: 25px;
+}
+
+@-webkit-keyframes jump {
+  0% {
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+
+@keyframes jump {
+  0% {
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+.restart-button {
+  border: none;
+  border-radius: 8px;
+  color: white;
+  background: rgb(142, 12, 82);
+  font-size: 20px;
+  padding: 8px 25px;
+  cursor: pointer;
+}
+
+.restart-button:hover {
+  background: rgb(177, 14, 104);
 }
